--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="光头佬 jxd 博客 - jxd134.github.io : 光头佬 jxd 博客">
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="description" content="jxd134博客">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>光头佬 jxd 博客 - jxd134.github.io</title>
-  </head>
+  <title>jxd134博客</title>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jxd134">View on GitHub</a>
+  <!-- HEADER -->
+  <div id="header_wrap" class="outer">
+    <header class="inner">
+      <a id="forkme_banner" href="https://github.com/jxd134">View on GitHub</a>
+      <h1 id="project_title">jxd134</h1>
+      <h2 id="project_tagline">博客列表</h2>
+      <ol>
+        <li>第一篇博客</li>
+        <li>第二篇博客</li>
+        <li>第三篇博客</li>
+        <li>第四篇博客</li>
+        <li>第五篇博客</li>
+      </ol>
+    </header>
+  </div>
 
-          <h1 id="project_title">光头佬 jxd 博客 - jxd134.github.io</h1>
-          <h2 id="project_tagline">光头佬 jxd 博客</h2>
+  <!-- MAIN CONTENT -->
+  <div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+      <h3>
+        <a id="jxd134githubio" class="anchor" href="#jxd134githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>jxd134.github.io</h3>
+    </section>
+  </div>
 
-        </header>
-    </div>
+  <h2>
+    <h3>首次尝试</h3>
+    <p>
+      个人首次尝试，以后此处将作为博客的首发地址（For test）
+    </p>
+  </h2>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="jxd134githubio" class="anchor" href="#jxd134githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>jxd134.github.io</h3>
+  <!-- FOOTER  -->
+  <div id="footer_wrap" class="outer">
+    <footer class="inner">
+      <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+    </footer>
+  </div>
+</body>
 
-<p>光头佬 jxd 博客</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
