--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
       <a id="forkme_banner" href="https://github.com/jxd134">View on GitHub</a>
       <h1 id="project_title">jxd134</h1>
       <h2 id="project_tagline">博客列表</h2>
-      <ol>
-        <li>第一篇博客</li>
-        <li>第二篇博客</li>
-        <li>第三篇博客</li>
-        <li>第四篇博客</li>
-        <li>第五篇博客</li>
-      </ol>
+
     </header>
   </div>
 
@@ -36,6 +30,18 @@
         <a id="jxd134githubio" class="anchor" href="#jxd134githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>jxd134.github.io</h3>
     </section>
   </div>
+
+  <h1>博客列表</h1>
+
+  <h2>
+    <ol>
+      <li>第一篇博客</li>
+      <li>第二篇博客</li>
+      <li>第三篇博客</li>
+      <li>第四篇博客</li>
+      <li>第五篇博客</li>
+    </ol>
+  </h2>
 
   <h2>
     <h3>首次尝试</h3>
